--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.6",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.1",
+    "mongoose": "^6.9.0",
     "next": "13.1.6",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
