--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "dayjs": "^1.11.7",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.1",
@@ -24,8 +25,12 @@
     "next": "13.1.6",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/react-calendar": "^3.9.0"
   }
 }
