--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-calendar": "^4.0.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "swr": "^2.0.3",
     "typescript": "4.9.5"
   },
   "devDependencies": {
