--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^6.9.0",
     "next": "13.1.6",
     "nextjs-progressbar": "^0.0.16",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-calendar": "^4.0.0",
     "react-dom": "18.2.0",
