--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.6",
+    "@stitches/react": "^1.2.8",
     "@types/mongoose": "^5.11.97",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
