--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-icons": "^1.2.0",
     "@radix-ui/react-select": "^1.2.0",
     "@stitches/react": "^1.2.8",
@@ -20,6 +21,7 @@
     "dayjs": "^1.11.7",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "framer-motion": "^9.0.4",
     "mongoose": "^6.9.0",
     "next": "13.1.6",
     "nextjs-progressbar": "^0.0.16",
