--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^9.0.4",
     "mongoose": "^6.9.0",
     "next": "13.1.6",
+    "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.16",
     "nookies": "^2.5.2",
     "react": "18.2.0",
