--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "@radix-ui/react-icons": "^1.2.0",
     "@radix-ui/react-popover": "^1.0.3",
     "@radix-ui/react-select": "^1.2.0",
-    "@radix-ui/react-toast": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.0.3",
     "@stitches/react": "^1.2.8",
     "@types/mongoose": "^5.11.97",
     "@types/node": "18.11.18",
@@ -34,6 +32,7 @@
     "react": "18.2.0",
     "react-calendar": "^4.0.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
     "swr": "^2.0.3",
     "typescript": "4.9.5"
   },
