--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@vercel/analytics": "^0.1.11",
+    "@vercel/og": "^0.4.0",
     "dayjs": "^1.11.7",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
