chore: auto-labeler 버전업 및 이벤트 변경
* pull_request 는 병합 이후에 트리거 되며 pull_request_target 은 병합할 대상 브랜치에서도 트리거 된다.
* jimschubert/labeler-action을 v2로 변경

--- a/.github/workflows/auto-labeler.yml
+++ b/.github/workflows/auto-labeler.yml
@@ -1,8 +1,11 @@
 name: Auto Labeler
 
 on:
-  pull_request:
+  pull_request_target:
     types: [opened]
+  # issue labeling 을 위한 설정
+  # issues:
+  #   types: [opened, edited, milestoned]
 
 jobs:
   labeler:
@@ -13,6 +16,6 @@ jobs:
     steps:
       - name: Check Labels
         id: labeler
-        uses: jimschubert/labeler-action@v1
+        uses: jimschubert/labeler-action@v2
         with:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
