--- a/package.json
+++ b/package.json
@@ -29,14 +29,17 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.4",
+    "i18next": "^22.4.13",
     "mongoose": "^6.9.0",
     "next": "13.1.6",
+    "next-i18next": "^13.2.2",
     "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.16",
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-calendar": "^4.0.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.0",
     "react-toastify": "^9.1.1",
     "swr": "^2.0.3",
     "typescript": "4.9.5"
