--- a/package.json
+++ b/package.json
@@ -55,10 +55,21 @@
     "@storybook/nextjs": "^7.0.0-rc.3",
     "@storybook/react": "^7.0.0-rc.3",
     "@storybook/testing-library": "^0.0.14-next.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/react-calendar": "^3.9.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "babel-loader": "^8.3.0",
     "chromatic": "^6.17.2",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-storybook": "^0.6.11",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "prettier": "^2.8.8",
     "storybook": "^7.0.0-rc.3"
   },
   "_id": "yaksok@0.1.1"
